--- a/opms-web/src/main/webapp/css/basic.css
+++ b/opms-web/src/main/webapp/css/basic.css
@@ -62,6 +62,12 @@ body {
 	-ms-filter: "alpha(opacity=90)"; /* IE 8 */
 }
 
+#leftTree {
+	float: left;
+	width: 16.7%;
+	border-right: 3px solid #DDDDDD
+}
+
 #frameCenter{
 	margin-top: 0;
 	margin-left: 300px;
