--- a/opms-web/src/main/webapp/css/basic.css
+++ b/opms-web/src/main/webapp/css/basic.css
@@ -43,12 +43,15 @@ body {
 }
 
 #index_body {
-	height: 99.9%;
+	width: 100%;
+	height: auto;
 	overflow: hidden;
 }
 
 #container {
-	margin: 0 1% 0 25%;
+	margin: 0 auto;
+	width: 940px;
+	height: auto;
 }
 
 #myHomePage {
@@ -57,6 +60,7 @@ body {
 	background: none repeat scroll 0 0 #FAFAFA; 
 	overflow: auto;
 	width: 100%;
+	height: auto;
 	opacity: 0.9; /* 标准: Firefox 1.5 以上, Opera, Safari */
 	filter: alpha(opacity = 90); /* IE 8 以下 */
 	-ms-filter: "alpha(opacity=90)"; /* IE 8 */
@@ -64,12 +68,12 @@ body {
 
 #leftTree {
 	float: left;
-	width: 16.7%;
-	border-right: 3px solid #DDDDDD
+	width: 17%;
+	border-right: 3px solid #DDDDDD;
 }
 
 #frameCenter{
-	margin-top: 0;
-	margin-left: 300px;
-	border: 1px solid;
+	float: left;
+	width: 82%;
+	margin-left: 5px;
 }
