--- a/opms-web/src/main/webapp/css/basic.css
+++ b/opms-web/src/main/webapp/css/basic.css
@@ -52,18 +52,19 @@ body {
 	margin: 0 auto;
 	width: 940px;
 	height: auto;
+	/* display: none; */
 }
 
 #myHomePage {
 	display: none;
-	margin: 0;
-	background: none repeat scroll 0 0 #FAFAFA; 
+	background: none repeat scroll 0 0 #FAFAFA;
 	overflow: auto;
 	width: 100%;
 	height: auto;
 	opacity: 0.9; /* 标准: Firefox 1.5 以上, Opera, Safari */
 	filter: alpha(opacity = 90); /* IE 8 以下 */
-	-ms-filter: "alpha(opacity=90)"; /* IE 8 */
+	-ms-filter: "alpha(opacity=90)";
+	margin: 0; /* IE 8 */
 }
 
 #leftTree {
@@ -72,7 +73,7 @@ body {
 	border-right: 3px solid #DDDDDD;
 }
 
-#frameCenter{
+#frameCenter {
 	float: left;
 	width: 82%;
 	margin-left: 5px;
